2009-01-27  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/packages/gdk-pixbuf-2.0/gdk-pixbuf-2.0.metadata:

	Fix binding for gdk_pixbuf_scale_simple

	* vapi/gdk-pixbuf-2.0.vapi: regenerated

2009-01-26  Jürg Billeter  <j@bitron.ch>

	* vapi/posix.vapi:

	Add bindings for ioctl and associated constants

2009-01-26  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Revert incorrect code generation change for constants, will need to
	use `extern' to properly export constants

2009-01-25  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:

	Support signals in static D-Bus client

2009-01-24  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:

	Fix type of implicit `this' parameter when using generics

2009-01-23  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodefunction.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodemethodmodule.vala:
	* gobject/valaccodemodule.vala:
	* gobject/valadbusclientmodule.vala:
	* gobject/valagasyncmodule.vala:
	* gobject/valagobjectmodule.vala:

	Refactor method parameter and result code generation

2009-01-23  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodearraymodule.vala:
	* gobject/valaccodedelegatemodule.vala:
	* gobject/valaccodemethodmodule.vala:

	Add virtual generate_parameter method. Move array and delegate type
	specific parameter generation to corresponding modules.

2009-01-20  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagirparser.vala:

	Support struct methods

2009-01-20  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Do not declare public constants as `static'

2009-01-19  Jürg Billeter  <j@bitron.ch>

	* vapi/gsl.vapi:

	More fixes, patch by Matías De la Puente

2009-01-19  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedelegatemodule.vala:

	Use correct C identifier for delegate target of static fields

2009-01-19  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodmodule.vala:
